# chip8_cxx

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
include/: chip8.h  global.h
src/: chip8.cpp  main.cpp
